--- a/src/stylesheets/styles/colors.scss
+++ b/src/stylesheets/styles/colors.scss
@@ -20,6 +20,7 @@ $darkGreen-hover: #3b493d;
 $bg-primary: #ffffff;
 $bg-secondary: #f5f5f1;
 $bg-tertiary: #3f6344;
+$bg-sponsors: #e9e9e3;
 $bg-pink: #fceee2;
 
 // button colors
