--- a/src/stylesheets/styles/fonts.scss
+++ b/src/stylesheets/styles/fonts.scss
@@ -12,6 +12,7 @@ $btn-sm: 0.9rem;
 $navbar-link: 1rem;
 $sidebar-link: 1.2rem;
 $sidebar-sublink: 0.8rem;
+$required: 1.2rem;
 
 $paragraph: 1rem;
 
